// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with just a sub-title 1`] = `
<div
  class="feature__Container-x19une-0 emFVdH"
>
  <h2
    class="feature__SubTitle-x19une-2 gPZIoA"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just a title 1`] = `
<div
  class="feature__Container-x19une-0 emFVdH"
>
  <h1
    class="feature__Title-x19une-1 bkHkLY"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with populated data 1`] = `
<div
  class="feature__Container-x19une-0 emFVdH"
>
  <h1
    class="feature__Title-x19une-1 bkHkLY"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <h2
    class="feature__SubTitle-x19une-2 gPZIoA"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;
